--- a/templates/window-encounter.hbs
+++ b/templates/window-encounter.hbs
@@ -145,7 +145,7 @@
                 <h3 class="window-encounter-section-title">Habitat</h3>
                 <div class="window-encounter-habitats">
                     {{#each habitats}}
-                    <button type="button" class="window-encounter-habitat {{#if selected}}active{{/if}}" data-habitat="{{name}}">{{name}}</button>
+                    <button type="button" class="window-encounter-habitat {{#if selected}}active{{/if}}" data-encounter-role="habitat" data-habitat="{{name}}">{{name}}</button>
                     {{/each}}
                 </div>
             </section>
